Solution: replaced DummySecurityManager by normal java security manager when  the system property java.securiy.policy is defined. Now for dynamic classloading we need to define: -java.security.policy with the right policies and -Djava.security.manager for the java security manager
Therefore:
For classloading and no security:
Windows:
-Djava.security.policy=="%SFHOME%\private\sf.no.security.policy" -Djava.security.manager -Dorg.smartfrog.codebase=%CODEBASE%
Unix:
"-Djava.security.policy==$SFHOME/private/sf.no.security.policy -Djava.security.manager -Dorg.smartfrog.codebase=$CODEBASE"

The policy file: sf.no.security.policy grant everything = no security. 

 If the property "java.security.policy" is not defined no security manager is loaded.

See SVN changes for more detail.

SFOS-236